--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
-node_modules
-bundle.js
+node_modules/
+public/bundle.js
+public/bundle.js.map
+public/styles.css
+public/styles.css.map
+public/styles.scss
